--- a/css/homePage.css
+++ b/css/homePage.css
@@ -2,7 +2,7 @@ a{
     text-decoration: none;
     color: black;
 }
-
+/* nav */
 .nav-backcolor{
     background-color: rgb(255, 255, 0);
 }
@@ -86,7 +86,7 @@ a{
     font-size: 2rem;
     background-color: yellow;
 }
-
+/* grid card */
 #grid{
     display: grid;
     grid-template-columns: auto auto auto auto auto;
@@ -135,7 +135,7 @@ a{
 .margin-price-buy{
     margin-bottom: 10px
 }
-
+/* login register */
 .entr-html{
     text-align: center;
     font-size: 1.5rem;
@@ -167,7 +167,6 @@ a{
     padding-right: 15px;
     text-align: center;
 }
-
 .login-button:hover{
     border-style: solid;
     border-width: 1px 1px;
@@ -181,7 +180,6 @@ a{
     padding-right: 15px;
     text-align: center;
 }
-
 .txt-lorem{
     text-align: center;
     margin-left: 30%;
@@ -189,4 +187,189 @@ a{
     color: gray;
     font-size: 0.75rem;
     margin-top: 10px;
+}
+/* profil */
+.card-prof{
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: 0.25rem;
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 20px;
+}
+.prof{
+    text-align: center;
+    font-size: 1.3rem
+}
+#grid-prof{
+    display: grid;
+    grid-template-columns: auto auto;
+    padding: 10px;
+}
+.item1{
+    grid-row: 1/ span 2;
+    grid-column: 1;
+}
+.item2{
+    grid-column: 2;
+    grid-row: 1;
+    max-width: 350px;
+    min-width: 350px;
+}
+.item3{
+    grid-column: 2;
+    grid-row: 2;
+    max-width: 350px;
+    min-width: 350px;
+}
+.item4-1{
+    grid-row: 3;
+    grid-column: 1;
+    margin-top: 20px;
+}
+.item4-2{
+    grid-row: 3;
+    grid-column: 2;
+    text-align: right;
+    margin-right: 15px;
+    margin-top: 20px;
+}
+.item4-3{
+    grid-row: 4;
+    grid-column: 1;
+}
+.item4-4{
+    grid-row: 4;
+    grid-column: 2;
+    text-align: right;
+    margin-right: 15px;
+}
+.img-profil{
+    width: 150px;
+    height: 150px;
+}
+.name{
+    text-align: center;
+    font-size: 1rem;
+}
+.inf{
+    text-align: center;
+    font-size: 0.75rem;
+}
+.settings-button{
+    border-style: solid;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    padding: 5px;
+    color: white;
+    background-color: yellow;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding-left: 32.3px;
+    padding-right: 32.3px;
+    text-align: center;
+}
+.settings-button:hover{
+    border-style: solid;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    padding: 5px;
+    color: yellow;
+    background-color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding-left: 32.3px;
+    padding-right: 32.3px;
+    text-align: center;
+}
+.disabled-button{
+    background-color: #6c757d;
+    color: white;
+    pointer-events: none;
+    cursor: default;
+    border-style: solid;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    padding: 5px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding-left: 27px;
+    padding-right: 27px;
+    text-align: center;
+}
+.create-store-button{
+    border-style: solid;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    padding: 5px;
+    color: white;
+    background-color: yellow;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+}
+.create-store-button:hover{
+    border-style: solid;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    padding: 5px;
+    color: yellow;
+    background-color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+}
+.create-post-button{
+    border-style: solid;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    padding: 5px;
+    color: white;
+    background-color: yellow;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+}
+.create-post-button:hover{
+    border-style: solid;
+    border-width: 1px 1px;
+    border-radius: 5px;
+    padding: 5px;
+    color: yellow;
+    background-color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: center;
+}
+.item4-5{
+    grid-row: 5;
+    grid-column: 1;
+}
+.txt-inf-create-store{
+    color: grey;
+    font-size: 0.6rem;
+    text-align: center;
+    max-width: 150px;
+    min-width: 150px;
+}
+.item4-6{
+    grid-row: 5;
+    grid-column: 2;
+    text-align: right;
+    margin-right: 15px;
+}
+.txt-inf-create-post{
+    color: grey;
+    font-size: 0.6rem;
+    text-align: center;
+    max-width: 150px;
+    min-width: 150px;
 }
