--- a/css/homePage.css
+++ b/css/homePage.css
@@ -12,7 +12,7 @@ a{
     text-decoration: none;
 }
 .txt-nav:hover{
-    color: black;
+    color: white;
     text-decoration: none;
 }
 .entrance:hover{
